--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "postinstall": "npm run clean && npm run transpile",
     "watch": "npm-run-all clean transpile && nodemon ./dist-server/",
     "start:stream": "node ./dist-server",
-    "transpile": "babel ./src/**.js --out-dir dist-server",
+    "transpile": "babel ./src/ --out-dir dist-server",
     "clean": "rimraf dist-server",
     "build": "npm-run-all clean transpile"
   },
@@ -35,16 +35,15 @@
     "rimraf": "^3.0.2",
     "standard": "16.0.3"
   },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
-  },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "7.17.10",
+    "@babel/runtime": "7.17.9",
+    "@faker-js/faker": "6.2.0",
     "@grpc/grpc-js": "^1.3.7",
     "apollo-server": "^3.3.0",
     "apollo-server-fastify": "^3.3.0",
     "csv-parser": "3.0.0",
+    "csv-write-stream": "2.0.0",
     "event-stream": "4.0.1",
     "fastify": "^3.21.6",
     "graphql": "^15.6.0",
